# packaging

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  build_installers.py  bundle_conda.py  entitlements.plist
.github/: PYPROJECT_TOML_UPDATED_TEMPLATE.md  SETUP_CFG_UPDATED_TEMPLATE.md
.github/workflows/: check_setup_cfg.yml  debug_macos_signing.yml  deploy.yml  installability.yml  make_bundle_conda.yml  pre_commit.yml  tests.yml  tests_ui.yml  typing.yml  upstream_checks.yml
ci_scripts/: check_installability_plugins.py
conda-recipe/: README.md  conda_build_config.yaml  conda_menu_config.json  menu.json  meta.yaml  recipe.yaml
constructor-manager/: README.md  pyproject.toml  setup.cfg  tox.ini
constructor-manager-api/: LICENSE  README.md  setup.cfg
constructor-manager-api/src/constructor_manager_api/: __init__.py  api.py  run.py
constructor-manager-api/src/constructor_manager_api/tests/: test_main.py
constructor-manager-api/src/constructor_manager_api/utils/: conda.py  io.py  settings.py  worker.py
constructor-manager-api/src/constructor_manager_api/utils/_tests/: test_worker.py
constructor-manager-backend/: README.md  setup.cfg
constructor-manager-backend/src/constructor_manager_backend/: __init__.py  actions.py  cli.py  defaults.py  installer.py  main.py
constructor-manager-backend/src/constructor_manager_backend/tests/: test_installer.py
constructor-manager-backend/src/constructor_manager_backend/utils/: anaconda.py  io.py  locking.py  packages.py  request.py  shortcuts.py
constructor-manager-backend/src/constructor_manager_backend/utils/tests/: test_conda.py  test_packages.py  test_request.py  test_versions.py
constructor-manager-cli/: README.md  setup.cfg  tox.ini
constructor-manager-cli/src/constructor_manager_cli/: __init__.py  actions.py  cli.py  defaults.py  installer.py  main.py
constructor-manager-cli/src/constructor_manager_cli/icons/: __init__.py
constructor-manager-cli/src/constructor_manager_cli/tests/: test_installer.py  test_main.py
constructor-manager-cli/src/constructor_manager_cli/utils/: anaconda.py  conda.py  io.py  locking.py  misc.py  packages.py  pypi.py  request.py  shortcuts.py  versions.py
constructor-manager-cli/src/constructor_manager_cli/utils/tests/: test_anaconda.py  test_conda.py  test_packages.py  test_request.py  test_versions.py
constructor-manager-ui/: README.md  pyproject.toml  setup.cfg  tox.ini
constructor-manager-ui/src/constructor_manager_ui/: __init__.py  cli.py  data.py  main.py  widgets.py
constructor-manager-ui/src/constructor_manager_ui/style/: __init__.py  base.qss  images.py  images.qrc  style_variables.txt  utils.py
constructor-manager-ui/src/constructor_manager_ui/tests/: test_constructor_manager_ui.py
constructor-manager-ui/src/constructor_manager_ui/widgets/: dialog copy.py  dialog.py  spinner.py  table.py  update.py
constructor-manager/src/constructor_manager/: __init__.py  actions.py  api.py  cli.py  defaults.py  installer.py  main.py  run.py
constructor-manager/src/constructor_manager/tests/: test_installer.py  test_main.py
constructor-manager/src/constructor_manager/utils/: anaconda.py  conda.py  io.py  locking.py  misc.py  packages.py  request.py  shortcuts.py  versions.py  worker.py
constructor-manager/src/constructor_manager/utils/_tests/: test_worker.py
constructor-manager/src/constructor_manager/utils/tests/: test_anaconda.py  test_conda.py  test_packages.py  test_request.py  test_versions.py
constructor-updater/: README.md  pyproject.toml  setup.cfg
constructor-updater-api/: README.md  setup.cfg  tox.ini
constructor-updater-api/src/constructor_updater_api/: api.py  defaults.py  run.py
constructor-updater-api/src/constructor_updater_api/utils/: worker.py
constructor-updater-cli/: README.md  setup.cfg
constructor-updater-cli/src/constructor_updater_cli/: actions.py  installer.py  main.py
constructor-updater-cli/src/constructor_updater_cli/utils/: anaconda.py  conda.py  io.py  packages.py  pypi.py  request.py
constructor-updater-cli/src/constructor_updater_cli/utils/tests/: test_versions.py
constructor-updater-ui/: README.md  setup.cfg
constructor-updater-ui/src/constructor_updater_ui/: cli.py  main.py
constructor-updater/.github/workflows/: test_and_deploy.yml
constructor-updater/constructor-updater/: cli.py  main.py  packages.py  updates.py  utils.py
constructor-updater/src/constructor_updater/: actions.py  api.py  cli.py  defaults.py  installer.py  main.py  packages.py  run.py  updates.py  utils.py
constructor-updater/src/constructor_updater/utils/: anaconda.py  conda.py  io.py  locking.py  packages.py  pypi.py  request.py  versions.py  worker.py
constructor-updater/src/constructor_updater/utils/tests/: test_utils.py  test_versions.py
data/: ci_installers_environment.yml
environments/: ci_installers_environment.yml  ci_packages_environment.yml  installability.yml
