[metadata]
name = constructor-manager-cli
version = 0.0.1
description = Constructor environment and updates manager command line interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/napari/packaging/constructor-manager-cli
author = napari team
author_email = napari-steering-council@googlegroups.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/napari/packaging/issues
    Source Code = https://github.com/napari/packaging/constructor-manager-cli

[options]
packages = find:
install_requires =
    packaging
    requests
    pyyaml
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    constructor-manager = constructor_manager_cli.main:main

[options.extras_require]
testing =
    pytest-cov
    pytest>=7.0.0
    mypy
    typing-extensions
    types-PyYAML
    types-requests

[mypy]
exclude = venv|tests

[mypy-packaging.*]
ignore_missing_imports = True
