[metadata]
name = constructor-updater
version = 0.1.0
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = {{ cookiecutter.github_repository_url }}
author = napari
author_email = TODO
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}/issues
    Documentation = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}#README.md
    Source Code = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}
    User Support = https://github.com/{{cookiecutter.github_username_or_organization}}/{{cookiecutter.plugin_name}}/issues

[options]
packages = find:
install_requires =
    packaging
    requests
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    constructor-updater = constructor_updater.cli:main

[options.extras_require]
testing =
    pytest-cov
    pytest>=7.0.0
    mypy
    typing-extensions
    types-requests
